started second slideshow and started horoscope page

--- a/style.css
+++ b/style.css
@@ -40,6 +40,37 @@ footer {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.n {
+  background-color: #8040bf;
+  position: relative;
+  overflow: hidden;
+}
+
+/* Style the links inside the navigation bar */
+.n a {
+  float: left;
+  display: block;
+  color: white;
+  text-shadow: 0 0 7px #000000, 0 0 5px #000000 ;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 16px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+/* Change the color of links on hover*/
+.n a:hover {
+  background-color: #e3ddfd;
+  text-shadow: none ;
+  color: black;
+}
+
+/* Hide the link that should open and close the topnav on small screens */
+.n .icon {
+  display: none;
+}
+
 ul.z {
   list-style-type: none;
 }
@@ -59,7 +90,7 @@ font-size: 70%;
   font-family: Arial, Helvetica, sans-serif;
   letter-spacing: 2px;
 }
-
+/*
 .button {
   border-radius: 8px;
   padding: 5px 10px;
@@ -73,7 +104,7 @@ font-size: 70%;
   cursor: pointer;
   font-family: Arial, Helvetica, sans-serif;
 }
-
+*/
 .astroTable {
   border-color: black;
   width: 100%;
@@ -86,7 +117,7 @@ th {
 }
 
 td {
-  text-align: left;
+  text-align: center;
   padding: 15px;
 }
 
@@ -288,6 +319,10 @@ ul.y {
 @keyframes fade {
   from {opacity: .4}
   to {opacity: 1}
+}
+
+.horoscopeTable {
+  position: relative;
 }
 
 .grid-container {
