--- a/horoscope.css
+++ b/horoscope.css
@@ -19,7 +19,7 @@ nav {
 
 main {
   grid-area: m;
-  background-color: #e60039;
+  background-color: #e3ddfd;
   padding: 5%;
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -60,7 +60,7 @@ footer {
 }
 
 .n a:hover {
-  background-color: #e3ddfd;
+  background-color: #e1e0e6;
   text-shadow: none ;
   color: black;
 }
@@ -74,9 +74,12 @@ ul.z li {
 }
 
 .horoscopeHeader {
-  color: #ffffff;
-  text-shadow: 0 0 7px #000000, 0 0 5px #8040bf;
+  font-size: 30px;
+  letter-spacing: 4px;
   text-align: center;
+  border: 2px solid #8040bf;
+  border-radius: 5px;
+  background-color: white;
 }
 
 .horoscopeTable {
@@ -105,7 +108,7 @@ ul.z li {
 }
 
 .horoscopeButton:hover {
-  background-color: #e3ddfd;
+  background-color: #8040bf;
   text-shadow: none ;
   color: black;
 }
