--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ nav {
 
 main {
   grid-area: m;
-  background-color: #e60039;
+  background-color: #e3ddfd;
   padding: 5%;
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -60,7 +60,7 @@ footer {
 }
 
 .n a:hover {
-  background-color: #e3ddfd;
+  background-color: #e1e0e6;
   text-shadow: none ;
   color: black;
 }
@@ -75,15 +75,19 @@ ul.z li {
 
 /* movie picker page */
 .movieformheader {
-  color: #ffffff;
-  text-shadow: 0 0 7px #000000, 0 0 5px #8040bf ;
+  font-size: 30px;
+  letter-spacing: 4px;
+  text-align: center;
+  border: 2px solid #8040bf;
+  border-radius: 5px;
+  background-color: white;
 }
 
 #mform {
-font-size: 70%;
+  font-size: 70%;
   color: black;
   font-family: Arial, Helvetica, sans-serif;
-  letter-spacing: 2px;
+  letter-spacing: 3px;
   font-weight: bold;
 }
 
@@ -122,6 +126,15 @@ tr {
 
 ul.y {
   list-style-type: circle;
+}
+
+.astrosignsHeader {
+  font-size: 30px;
+  letter-spacing: 4px;
+  text-align: center;
+  border: 2px solid #8040bf;
+  border-radius: 5px;
+  background-color: white;
 }
 
 /* buttons for elements and modalities */
@@ -260,19 +273,18 @@ ul.y {
 
 /* movie catalog page */
 .catalogHeaders {
-  color: #ffffff;
-  text-shadow: 0 0 7px #000000, 0 0 5px #8040bf;
+  font-size: 30px;
+  letter-spacing: 4px;
   text-align: center;
+  border: 2px solid #8040bf;
+  border-radius: 5px;
+  background-color: white;
 }
 
 .slideshow-container {
   max-width: 200px;
   position: relative;
   margin: auto;
-}
-
-.mySlides {
-  display: none;
 }
 
 .prev, .next {
