realized I edited media query wrong for responsive layout so I fixed it

--- a/layout.css
+++ b/layout.css
@@ -47,6 +47,11 @@ footer {
   grid-gap: 10px;
 }
 
+@media screen and (max-width: 600px){
+  body {
+    background-color: black;
+  }
+
 .grid-container {
   display: grid;
   grid-template-areas:
